navigator__bar in all

--- a/Star wars/History/index.html
+++ b/Star wars/History/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>History</title>
+    <title>Star Wars Enciclopedia</title>
+    <link rel="icon" href="../../Imagenes/logo.png" type="image/png">
+    <link rel="stylesheet" href="estilo.css"/>
+    <link rel="stylesheet" href="../font/font.css">
 </head>
 <body>
-    hello star Wars
+    <header class="Header">
+        <h1 class="Title">Star Wars</h1>
+        <nav class="Navigator__bar">
+            <ul class="Navigator__bar List">
+                <li class="List List__cont"><a href="../Code/index.html" class="Link List__cont">HOME</a></li>
+                <li class="List List__cont"><a href="../about/index.html" class="Link List__cont">ABOUT</a></li>
+                <li class="List List__cont"><a href="" class="Link List__cont">HISTORY</a></li>
+                <li class="List List__cont"><a href="" class="Link List__cont">CHARACTERS</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
