--- a/Star wars/about/index.html
+++ b/Star wars/about/index.html
@@ -14,7 +14,7 @@
         <nav class="Navigator__bar">
             <ul class="Navigator__bar List">
                 <li class="List List__cont"><a href="../Code/index.html" class="Link List__cont">HOME</a></li>
-                <li class="List List__cont"><a href="../about/index.html" class="Link List__cont">ABOUT</a></li>
+                <li class="List List__cont"><a href="" class="Link List__cont">ABOUT</a></li>
                 <li class="List List__cont"><a href="" class="Link List__cont">HISTORY</a></li>
                 <li class="List List__cont"><a href="" class="Link List__cont">CHARACTERS</a></li>
             </ul>
