--- a/Star wars/Code/index.html
+++ b/Star wars/Code/index.html
@@ -12,9 +12,9 @@
         <nav class="Navigator__bar">
             <ul class="Navigator__bar List">
                 <li class="List List__cont"><a href="" class="Link List__cont">HOME</a></li>
-                <li class="List List__cont"><a href="" class="Link List__cont">ABOUT</a></li>
-                <li class="List List__cont"><a href="" class="Link List__cont">HISTORY</a></li>
-                <li class="List List__cont"><a href="" class="Link List__cont">CHARACTERS</a></li>
+                <li class="List List__cont"><a href="../about/index.html" class="Link List__cont">ABOUT</a></li>
+                <li class="List List__cont"><a href="../History/index.html" class="Link List__cont">HISTORY</a></li>
+                <li class="List List__cont"><a href="../Characters/index.html" class="Link List__cont">CHARACTERS</a></li>
             </ul>
         </nav>
     </header>
