The header is placed with its style and the main page begins

--- a/Portafolio/index.html
+++ b/Portafolio/index.html
@@ -10,6 +10,37 @@
     type="image/jpg">
 </head>
 <body>
-    
+    <header>
+        <nav class="Navigation__bar">
+            <h2>Jose Santana</h2>
+            <ul class="List Navigation__bar">
+                <a href="" class="Link List">
+                    <Li class="List__cont">ABOUT ME</Li>
+                </a>
+                <a href="" class="Link List">
+                    <Li class="List__cont">PROJECTS</Li>
+                </a>
+                <a href="" class="Link List">
+                    <Li class="List__cont">CONTACT</Li>
+                </a>
+            </ul>
+            <div class="Imagen__Logo">
+                <img src="../Imagenes/J.png" alt="Logo">
+            </div>
+        </nav>
+    </header>
+    <main>
+        <section class="Section__page">
+            <div class="Presentation">
+                <h3>Jose Santana</h3>
+                <p>web developer and developer backend</p>
+                <ul class="List">
+                    <li class="List"><a href="" class="Link"><img src="" alt="instagram" class="Imagen"></a></li>
+                    <li class="List"><a href="" class="Link"><img src="" alt="Github" class="Imagen"></a></li>
+                    <li class="List"><a href="" class="Link"><img src="" alt="Twitter" class="Imagen"></a></li>
+                </ul>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
