Articles and main section were added

--- a/Portafolio/index.html
+++ b/Portafolio/index.html
@@ -35,12 +35,67 @@
                 <h3>Jose Santana</h3>
                 <p>web developer and developer backend</p>
                 <ul class="List">
-                    <li class="List"><a href="" class="Link"><img src="" alt="instagram" class="Imagen"></a></li>
-                    <li class="List"><a href="" class="Link"><img src="" alt="Github" class="Imagen"></a></li>
-                    <li class="List"><a href="" class="Link"><img src="" alt="Twitter" class="Imagen"></a></li>
+                    <li class="List"><a href="" class="Link"><img src="../Imagenes/Instagram.png" alt="instagram" class="Imagen"></a></li>
+                    <li class="List"><a href="" class="Link"><img src="../Imagenes/GitHub.png" alt="Github" class="Imagen"></a></li>
+                    <li class="List"><a href="" class="Link"><img src="../Imagenes/twitter.png" alt="Twitter" class="Imagen"></a></li>
+                    
                 </ul>
             </div>
         </section>
+        <section class="Section__page">
+            <div class="Presentation">
+                <h3>My Skills</h3>
+                <p class="Pargaraphy">These are my languages ​​that I master the most:</p>
+                <ul class="List List--skill">
+                    <li class="List"><img src="https://i.ibb.co/pKKrwn3/javascript-js-icon-2048x2048-nyxvtvk0.png" alt="js" class="Imagen"></li>
+                    <li class="List"><img src="https://i.ibb.co/j86Drxg/css-3.png" alt="css" class="Imagen"></li>
+                    <li class="List"><img src="https://i.ibb.co/tL1v6Jt/html-5.png" alt="Html" class="Imagen"></li>
+                    <li class="List"><img src="https://i.postimg.cc/QCq38WR1/python-18894.png" alt="Python" class="Imagen"></li>
+                    <li class="List"><img src="https://i.ibb.co/JBWfJH6/figma.png" alt="Figma" class="Imagen"></li>
+                    <li class="List"><img src="https://i.ibb.co/0XzbYsZ/vscode-icons-file-type-light-json.png" alt="Json" class="Imagen"></li>
+                    <li class="List"><img src="https://i.postimg.cc/6QDwYKr2/java.png" alt="Java" class="Imagen"></li>
+                </ul>
+            </div>
+        </section>
+        <article class="Article__page">
+            <div class="Presentation__article">
+                <h2>About me</h2>
+                <p>
+                    Hello, my name is Jose Santana, I am 19 years old and I am passionate about programming, 
+                    my high school studies were at the Francisco de Miranda school in Venezuela, 
+                    Valencia State, I am currently studying computer engineering at the Jose Antonio Paez University and
+                    I am in the sixth semester of my degree (6/10), 
+                    I love programming and learning something new in programming every day
+                </p>
+
+            </div>
+        </article>
+        <article class="Article__page">
+            <div class="Presentation__article">
+                <h2>About me</h2>
+                <p>
+                    Hello, my name is Jose Santana, I am 19 years old and I am passionate about programming, 
+                    my high school studies were at the Francisco de Miranda school in Venezuela, 
+                    Valencia State, I am currently studying computer engineering at the Jose Antonio Paez University and
+                    I am in the sixth semester of my degree (6/10), 
+                    I love programming and learning something new in programming every day
+                </p>
+
+            </div>
+        </article>
+        <article class="Article__page">
+            <div class="Presentation__article">
+                <h2>About me</h2>
+                <p>
+                    Hello, my name is Jose Santana, I am 19 years old and I am passionate about programming, 
+                    my high school studies were at the Francisco de Miranda school in Venezuela, 
+                    Valencia State, I am currently studying computer engineering at the Jose Antonio Paez University and
+                    I am in the sixth semester of my degree (6/10), 
+                    I love programming and learning something new in programming every day
+                </p>
+
+            </div>
+        </article>
     </main>
 </body>
 </html>
