--- a/Portafolio/index.html
+++ b/Portafolio/index.html
@@ -35,9 +35,9 @@
                 <h3>Jose Santana</h3>
                 <p>web developer and developer backend</p>
                 <ul class="List">
-                    <li class="List"><a href="" class="Link"><img src="../Imagenes/Instagram.png" alt="instagram" class="Imagen"></a></li>
-                    <li class="List"><a href="" class="Link"><img src="../Imagenes/GitHub.png" alt="Github" class="Imagen"></a></li>
-                    <li class="List"><a href="" class="Link"><img src="../Imagenes/twitter.png" alt="Twitter" class="Imagen"></a></li>
+                    <li class="List"><a href="https://www.instagram.com/santana05.js?igsh=MXRxZnhlejBhM3Z6cQ==" class="Link"><img src="../Imagenes/Instagram.png" alt="instagram" class="Imagen"></a></li>
+                    <li class="List"><a href="https://github.com/JoSantana0005" class="Link"><img src="../Imagenes/GitHub.png" alt="Github" class="Imagen"></a></li>
+                    <li class="List"><a href="https://wa.me/qr/LNI4VTUXIJLAF1" class="Link"><img src="../Imagenes/Whatsapp.png" alt="Twitter" class="Imagen"></a></li>
                     
                 </ul>
             </div>
