--- a/Portafolio/index.html
+++ b/Portafolio/index.html
@@ -57,8 +57,8 @@
                 </ul>
             </div>
         </section>
-        <article class="Article__page">
-            <div class="Presentation__article">
+        <section class="Article__page">
+            <article class="Presentation__article">
                 <h2>About me</h2>
                 <p>
                     Hello, my name is Jose Santana, I am 19 years old and I am passionate about programming, 
@@ -68,34 +68,52 @@
                     I love programming and learning something new in programming every day
                 </p>
 
-            </div>
-        </article>
-        <article class="Article__page">
-            <div class="Presentation__article">
-                <h2>About me</h2>
+            </article>
+        </section>
+        <section class="Article__page">
+            <article class="Presentation__article">
+                <h2>Experience</h2>
                 <p>
-                    Hello, my name is Jose Santana, I am 19 years old and I am passionate about programming, 
-                    my high school studies were at the Francisco de Miranda school in Venezuela, 
-                    Valencia State, I am currently studying computer engineering at the Jose Antonio Paez University and
-                    I am in the sixth semester of my degree (6/10), 
-                    I love programming and learning something new in programming every day
+                    My experience as a programmer has been fun and stressful at the same time but I enjoy learning something new every day in this wonderful world of programming and I have learned in these 2 years that I have been programming, 
+                    I have shown that I can handle many problems at the same time.
                 </p>
 
-            </div>
-        </article>
-        <article class="Article__page">
-            <div class="Presentation__article">
-                <h2>About me</h2>
+            </article>
+        </section>
+        <section class="Article__page">
+            <article class="Presentation__article">
+                <h2>Hobby</h2>
                 <p>
-                    Hello, my name is Jose Santana, I am 19 years old and I am passionate about programming, 
-                    my high school studies were at the Francisco de Miranda school in Venezuela, 
-                    Valencia State, I am currently studying computer engineering at the Jose Antonio Paez University and
-                    I am in the sixth semester of my degree (6/10), 
-                    I love programming and learning something new in programming every day
+                    My favorite hobby is programming, I can spend several hours programming or learning a new language to improve my logic in programming and for that reason 
+                    I do many exercises to improve my logic and syntax in programming, my favorite languages ​​are Python, Javascript and Java. These are programming languages 
+                    ​​that I know the most about and well, it's html and css that's there.
                 </p>
+            </article>
+        </section>
 
-            </div>
-        </article>
+        <section class="Contact--section">
+            <form>
+                <h2>Contact</h2>
+                <div class="Input--Container">
+                    <label for="Nombre">Name</label>
+                    <label for="Nombre">
+                        <input placeholder="Enter your First name" type="text" id="Nombre" required>
+                        <img src="" alt="person" id="Nombre">
+                    </label>
+                    <label for="Apellido">Last Name</label>
+                    <label for="Apellido">
+                        <input placeholder="Enter your Last Name" type="text" id="Apellido" required>
+                        <img src="" alt="person" id="Nombre">
+                    </label>
+                </div>
+                <div class="Input--Container">
+                    <textarea placeholder="Enter your comment" rows=10 cols="45" required></textarea>
+                </div>
+                <div class="Input--Container">
+                    <button type="submit">Enviar</button>
+                </div>
+            </form>
+        </section>
     </main>
 </body>
 </html>
