--- a/Star Wars/Login/Login.html
+++ b/Star Wars/Login/Login.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <!--Form-->
-    <div>
-        <div class="Content">
+    <section>
+        <article class="Content">
             <form>
                 <h1>Login</h1>
                 <div class="Input--Container">
@@ -22,10 +22,13 @@
                     <label for="Contraseña">Contraseña</label>
                     <input type="password" placeholder="Ingrese su contraseña" id="Contraseña">
                 </div>
-                <button type="submit">Ingresar</button>
+                <div class="Button--Container">
+                    <button type="submit">Ingresar</button>
+                    <button type="button">Crear Cuenta</button>
+                </div>
             </form>
-        </div>
-    </div>
+        </article>
+    </section>
     
 </body>
 </html>
