Validaciones de correo

--- a/Star Wars/Login/Login.html
+++ b/Star Wars/Login/Login.html
@@ -23,12 +23,12 @@
                     <input type="password" placeholder="Ingrese su contraseña" id="Contraseña">
                 </div>
                 <div class="Button--Container">
-                    <button type="submit">Ingresar</button>
-                    <button type="button">Crear Cuenta</button>
+                    <button type="submit" id="Ingresar">Ingresar</button>
+                    <button type="button" id="Cuenta">Crear Cuenta</button>
                 </div>
             </form>
         </article>
     </section>
-    
 </body>
+<script src="login.js"></script>
 </html>
