Ruta a la principal

--- a/Star Wars/Login/Login.html
+++ b/Star Wars/Login/Login.html
@@ -23,7 +23,7 @@
                     <input type="password" placeholder="Ingrese su contraseña" id="Contraseña">
                 </div>
                 <div class="Button--Container">
-                    <button type="submit" id="Ingresar">Ingresar</button>
+                    <button type="button" id="Ingresar">Ingresar</button>
                     <button type="button" id="Cuenta">Crear Cuenta</button>
                 </div>
             </form>
